--- a/ansiblex86.yml
+++ b/ansiblex86.yml
@@ -45,7 +45,7 @@ apps:
 ## Install software
 - name: Install software x86
   debug:
-    msg: "Test x86"
+    msg: "Test output x86"
 #  ansible.windows.win_package:
 #    path: C:\tmp\KeePass-2.49-Setup.exe
 #    product_id: KeePassPasswordSafe2_is1
