--- a/ansiblex64.yml
+++ b/ansiblex64.yml
@@ -1,4 +1,4 @@
-###### Not finished WIP ######
+###### WIP (install software)  ######
 
 ## Install windows software with ansible x64
 # ./roles/test/vars/vars.yml
@@ -45,7 +45,7 @@ apps:
 ## Install software
 - name: Install software x64
   debug:
-    msg: "Work Twerk x64"
+    msg: "Test output x64"
 #  ansible.windows.win_package:
 #    path: C:\tmp\KeePass-2.49-Setup.exe
 #    product_id: KeePassPasswordSafe2_is1
