--- a/ansiblex86.yml
+++ b/ansiblex86.yml
@@ -7,15 +7,15 @@ apps:
   - softwareName: KeePass
     softwareVersion: "2.49"
     softwareParam: /VERYSILENT
-    folderPath: C:\tmp
-  - softwareName: Firefox
-    softwareVersion: "92.0"
+    installPath: C:\tmp\KeePass-2.49-Setup.exe
+  - softwareName: MobaXterm
+    softwareVersion: "21.4.0.4736"
     softwareParam: /qn
-    folderPath: c:\tmp\
+    installPath: 
   - softwareName: draw.io
     softwareVersion: "15.2.7"
     softwareParam: /SILENT
-    folderPath: c:\tmp\
+    installPath: 
 
 # ./roles/test/tasks/base.yml
 ---
@@ -29,29 +29,31 @@ apps:
   register: checkNamex86
 
 ## Loop registry with pschildnames
-- name: reg x86 software path
+- name: reg displayversion x86
   ansible.windows.win_reg_stat: 
     path: HKLM:\SOFTWARE\WOW6432Node\Microsoft\Windows\CurrentVersion\Uninstall\{{ item }}
   loop: "{{ checkNamex86.stdout_lines }}"
   register: checkVerx86
 
 ## Set facts for name and version
-- name: set facts x86 displayName and displayVersion
+- name: msg x86 DisplayName and Version
   set_fact:
     regListx86: "{{ regListx86| default ([]) + [item.properties.DisplayName.value + ' ' + item.properties.DisplayVersion.value] }}"
   when: item.properties.DisplayName.value is defined
   loop: "{{ checkVerx86.results }} "
 
-## Install software
+- name: copy file
+  ansible.windows.win_copy:
+    src: software
+    dest: C:\tmp\
+
+## Install software x86
 - name: Install software x86
   debug:
-    msg: "Test output x86"
+    msg: "Work"
 #  ansible.windows.win_package:
-#    path: C:\tmp\KeePass-2.49-Setup.exe
-#    product_id: KeePassPasswordSafe2_is1
-#    arguments: /VERYSILENT
-#    creates_path: "C:\\Program Files\\KeePass Password Safe 2\\KeePass.exe"
-#    creates_version: "2.49"
+#    path: "{{ item.installPath }}"
+#    arguments: "{{ item.softwareParam }}"
 #    state: present
   when:
     - regListx86 | regex_search(item.softwareName)
