--- a/ansiblex64.yml
+++ b/ansiblex64.yml
@@ -1,6 +1,7 @@
 ###### WIP (install software)  ######
 
 ## Install windows software with ansible x64
+# Example for var data
 # ./roles/test/vars/vars.yml
 ---
 apps:
@@ -11,13 +12,21 @@ apps:
   - softwareName: MobaXterm
     softwareVersion: "21.4.0.4736"
     softwareParam: /qn
-    installPath: 
+    installPath: C:\tmp\MobaXterm_installer_21.3.msi
   - softwareName: draw.io
-    softwareVersion: "15.2.7"
-    softwareParam: /SILENT
-    installPath: 
+    softwareVersion: "15.4.0"
+    softwareParam: /S
+    installPath: C:\tmp\draw.io-15.4.0-windows-installer.exe
 
-# ./roles/test/tasks/base.yml
+#./roles/test/tasks/copy.yml
+---
+- name: copy file
+  win_copy:
+    src: software
+    dest: C:\tmp\
+...
+
+# ./roles/test/tasks/basex64.yml
 ---
 ## Include vars from role path
 - name: includ vars
@@ -25,12 +34,12 @@ apps:
 
 ## Get all PSChildName names from registry
 - name: reg displayname x64
-  ansible.windows.win_shell: (Get-ItemProperty -Path HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\*).PSChildName
+  win_shell: (Get-ItemProperty -Path HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\*).PSChildName
   register: checkChildNamex64
 
 ## Loop registry with pschildnames
 - name: reg displayversion x64
-  ansible.windows.win_reg_stat: 
+  win_reg_stat:
     path: HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\{{ item }}
   loop: "{{ checkChildNamex64.stdout_lines }}"
   register: checkVerx64
@@ -42,21 +51,15 @@ apps:
   when: item.properties.DisplayName.value is defined
   loop: "{{ checkVerx64.results }} "
 
-- name: copy file
-  ansible.windows.win_copy:
-    src: software
-    dest: C:\tmp\
-
 ## Install software
 - name: Install software x64
-  debug:
-    msg: "Work Twerk x64"
-#  ansible.windows.win_package:
-#    path: "{{ item.installPath }}" 
-#    arguments: "{{ item.softwareParam }}"
-#    state: present
+  win_package:
+    path: "{{ item.installPath }}"
+    product_id: " "
+    arguments: "{{ item.softwareParam }}"
+    state: present
   when:
-    - regListx64 | regex_search(item.softwareName)
-    - not regListx64 | regex_search(item.softwareVersion)
+    - regListx64 is regex(item.softwareName)
+    - regListx64 is not regex(item.softwareVersion)
   loop: "{{ apps }}"
 ...
